--- a/Capstone_Sydney_melbourne_Analytical_view.ipynb
+++ b/Capstone_Sydney_melbourne_Analytical_view.ipynb
@@ -3656,8 +3656,8 @@
     }
    ],
    "source": [
-    "CLIENT_ID = 'LX3GSNOY1QGZ4VU1YZ5KAIX50VKGHWXYU53P0DQ4O5A2DGRH' # your Foursquare ID\n",
-    "CLIENT_SECRET = '4H54LVFYCYUJPHV5QUYZYGUXSDFPEUXKRXOMGBZ3CPKLKQY4' # your Foursquare Secret\n",
+    "CLIENT_ID = 'Removed as it is a private ' # your Foursquare ID\n",
+    "CLIENT_SECRET = 'Removed as it is a private' # your Foursquare Secret\n",
     "VERSION = '20180605' # Foursquare API version\n",
     "\n",
     "print('Your credentails:')\n",
@@ -8848,6 +8848,162 @@
     "# creating uniformity in column names as the same is required during merging of datasets\n",
     "sydney_house_price=sydney_house_price.rename(columns={'House_Price':'Mean_house_price_in_K'})\n",
     "MelbournePrice_mean=MelbournePrice_mean.rename(columns={'Price':'Mean_house_price_in_K'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Suburb</th>\n",
+       "      <th>Mean_house_price_in_K</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ashfield</td>\n",
+       "      <td>844.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Botany Bay</td>\n",
+       "      <td>1120.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Lane Cove</td>\n",
+       "      <td>885.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Leichhardt</td>\n",
+       "      <td>819.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Marrickville</td>\n",
+       "      <td>1224.1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Suburb  Mean_house_price_in_K\n",
+       "0      Ashfield                  844.0\n",
+       "1    Botany Bay                 1120.2\n",
+       "2     Lane Cove                  885.4\n",
+       "3    Leichhardt                  819.0\n",
+       "4  Marrickville                 1224.1"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sydney_house_price.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Suburb</th>\n",
+       "      <th>Mean_house_price_in_K</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Abbotsford</td>\n",
+       "      <td>1126.410256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Aberfeldie</td>\n",
+       "      <td>1462.965517</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Airport West</td>\n",
+       "      <td>766.807712</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Albanvale</td>\n",
+       "      <td>540.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Albert Park</td>\n",
+       "      <td>1950.985294</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Suburb  Mean_house_price_in_K\n",
+       "0    Abbotsford            1126.410256\n",
+       "1    Aberfeldie            1462.965517\n",
+       "2  Airport West             766.807712\n",
+       "3     Albanvale             540.333333\n",
+       "4   Albert Park            1950.985294"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MelbournePrice_mean.head()"
    ]
   },
   {
